# generator

./: .gitignore  2wire.py  2wire.txt  README.md  log.txt  logging.conf  pyproject.toml  webserver.py  webserver.txt
flaskr/: __init__.py
flaskr/templates/: index.html
generatorpi.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
relays/: __init__.py
src/: 2wire.conf  2wire.py  flask_config.py  logging.conf  webserver.conf  webserver.py
src/flaskr/: __init__.py  dtos.py
src/flaskr/templates/: layout.html
src/logger_setup/: __init__.py
src/relays/: __init__.py
tests/: conftest.py  test_factory.py
