[project]
name = "generatorpi"
version = "2.0.1"
description = 'wirelessly control generator via webbrowser'
authors = [
  { name = "Aaron Sulwer", email = "asulwer@gmail.com" },
]
readme = "README.md"
dependencies = [
    "flask",
    "flask-socketio",
    "python-socketio[asyncio_client]",
    "gevent",
    "smbus2",
    "gpiozero"
]

[project.optional-dependencies]
test = [
    "pytest",
    "coverage"
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
branch = false
source = [
  "flaskr",
  "relays",
  "logger_setup"
]